feat(tasks): implement keywork search by title and description
